--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>Foundations of JavaScript</title>
   </head>
   <body>
