--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
     <div id="start" class="button">Count</div>
     <div id="counter" class="button"></div>
     <div id="cats"></div>
+
+    <h2><a href="ie8/">Internet Explorer 8</a></h2>
+    <p>Most browsers except IE8 treat whitespace between elements (such as
+      spaces or carriage returns) as a text node.</p>
   </body>
 </html>
