--- a/ie8/index.html
+++ b/ie8/index.html
@@ -6,7 +6,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="../favicon.ico" />
     <title>Internet Explorer 8</title>
   </head>
   <body>
