--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
     <p>Most browsers except IE8 treat whitespace between elements (such as
       spaces or carriage returns) as a text node.</p>
 
+    <small><i>Changes last made on <span id="timestamp"></span></i></small>
   </body>
 </html>
