Place the object in a variable before returning. This way private methods can access public members.

--- a/ie8/index.html
+++ b/ie8/index.html
@@ -10,6 +10,7 @@
     <title>Internet Explorer 8</title>
   </head>
   <body>
+
     <div id="page">
       <h2>Buy groceries</h2>
       <ul id="list">
@@ -18,9 +19,11 @@
         <li id="three" class="hot">honey</li>
         <li id="four">balsamic vinegar</li>
       </ul>
+      <hr>
+      <h3>Whitespace nodes in children of ul element</h3>
+      <div id="nodes"></div>
     </div>
-    <hr>
-    <h2>Whitespace nodes in children of ul element</h2>
-    <div id="nodes"></div>
+
+    <small><i>Changes last made on <span id="timestamp"></span></i></small>
   </body>
 </html>
