--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     <link rel="shortcut icon" href="favicon.ico" />
-    <title>Foundations of JavaScript</title>
+    <title>Notes on foundations of JavaScript</title>
   </head>
   <body>
 
@@ -20,7 +20,7 @@
     <div id="counter" class="button"></div>
     <div id="cats"></div>
 
-    <h3>Private and public members</h3>
+    <h3>Public and private members</h3>
     <p>
       <textarea class="code" readonly=true cols=41 rows=20>
   var counter = function(element) {
