--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <h3>Objects by reference</h3>
-    <p>Arguments in primitive data types are passed to a function <em>by value</em>. Objects are passed <em>by reference</em>. This is one possible cause of side effects.</p>
+    <p>Arguments in primitive data types are passed to a function <em>by value</em>. Objects are passed <em>by reference</em>. This is one possible cause of <a href="http://en.wikipedia.org/wiki/Side_effect_(computer_science)" target="_blank">side effects</a>.</p>
     <p>
       <textarea id="bob" class="code" readonly=true cols=41 rows=14>
   var isBobSmiling = false;
