--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="listener.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="listener.css"/>
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Notes on foundations of JavaScript</title>
   </head>
   <body>
+
+    <h3>Event listeners and handlers</h3>
+    <p>Traditional DOM event handler attachEvent method only works in
+      <a href="#ie8">Internet Explorer</a> and Opera. DOM level 2 event
+      listener addEventListener method works in Firefox, Google Chrome
+      and Safari (and Opera and <a href="#ie8">Internet Explorer</a>
+      from version 9).</p>
+    <div id="click1" class="listener clickable">click<br>(jQuery)</div>
+    <div id="click2" class="listener clickable">click<br>(DOM Listener)</div>
+    <div id="click3" class="listener clickable">onclick<br>(DOM Handler)</div>
 
     <h3>Objects by reference</h3>
     <p>Arguments in primitive data types are passed to a function <em>by
@@ -71,10 +83,28 @@
     <div id="catButton" class="button">Cat counter</div>
     <div id="dogButton" class="button">Dog counter</div>
 
-    <h3><a href="ie8/">Internet Explorer 8</a></h3>
+    <a id="ie8"/><h3><a href="ie8/">Internet Explorer 8</a></h3>
     <p>Most browsers except IE8 treat whitespace between elements (such as
       spaces or carriage returns) as a text node.</p>
+    <p>IE8 had a different event model and did not support addEventListener().
+      Instead, it used a method called attachEvent().</p>
+    <p>
+      <textarea class="code" readonly=true cols=41 rows=12>
+  if (el.addEventListener) {
+    el.addEventListener('blur',
+      function() {
+        handleThisEvent();
+      }, false);
+  } else {
+    el.attachEvent('onblur',
+      function() {
+        handleThisEvent();
+      });
+  }</textarea>
+    </p>
 
-    <small><i>Changes last made on <span id="timestamp"></span></i></small>
+    <p>
+      <small><i>Changes last made on <span id="timestamp"></span></i></small>
+    </p>
   </body>
 </html>
