Add notes on form events.

--- a/ie8/index.html
+++ b/ie8/index.html
@@ -32,6 +32,11 @@
     <div id="click1" class="listener clickable">click<br>(jQuery)</div>
     <div id="click2" class="listener clickable">click<br>(DOM Listener)</div>
     <div id="click3" class="listener clickable">onclick<br>(DOM Handler)</div>
+    <p>'input' and 'change' form events are supported in IE9 and up.</p>
+    <p>Add to the grocery list: <input id="grocery" type="text" /></p>
+    <div id="input1" class="listener">input<br>(jQuery)</div>
+    <div id="input2" class="listener">input<br>(DOM Listener)</div>
+    <div id="input3" class="listener">oninput<br>(DOM Handler)</div>
 
     <p>
       <small><i>Changes last made on <span id="timestamp"></span></i></small>
