--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
       });
   }</textarea>
     </p>
+    <p>'input' and 'change' form events are not supported in IE8.</p>
+    <p>Event object is not passed automatically to event handler functions
+      in IE8. It is available as a child of the window object.</p>
 
     <p>
       <small><i>Changes last made on <span id="timestamp"></span></i></small>
