Event delegation and updating the view of nodes.

--- a/ie8/index.html
+++ b/ie8/index.html
@@ -17,10 +17,10 @@
     <div id="page">
       <h2>Buy groceries</h2>
       <ul id="list">
-        <li id="one" class="hot"><em>fresh</em> figs</li>
-        <li id="two" class="hot">pine nuts</li>
-        <li id="three" class="hot">honey</li>
-        <li id="four">balsamic vinegar</li>
+        <li class="hot"><em>fresh</em> figs</li>
+        <li class="hot">pine nuts</li>
+        <li class="hot">honey</li>
+        <li>balsamic vinegar</li>
       </ul>
       <hr>
       <h3>Whitespace nodes in children of ul element</h3>
