Add notes on changing default behavior.

--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
       });
   }</textarea>
     </p>
-    <p>'input' and 'change' form events are not supported in IE8.</p>
-    <p>Event object is not passed automatically to event handler functions
-      in IE8. It is available as a child of the window object.</p>
+    <p><a href="ie8/">This page</a> demonstrates some of the differences in
+      IE8 when it is loaded in Internet Explorer.</p>
 
     <p>
       <small><i>Changes last made on <span id="timestamp"></span></i></small>
