--- a/ie8/index.html
+++ b/ie8/index.html
@@ -17,10 +17,10 @@
     <div id="page">
       <h2>Buy groceries</h2>
       <ul id="list">
-        <li class="hot"><em>fresh</em> figs</li>
-        <li class="hot">pine nuts</li>
-        <li class="hot">honey</li>
-        <li>balsamic vinegar</li>
+        <li class="grocery hot"><em>fresh</em> figs</li>
+        <li class="grocery hot">pine nuts</li>
+        <li class="grocery hot">honey</li>
+        <li class="grocery">balsamic vinegar</li>
       </ul>
       <hr>
       <h3>Whitespace nodes in children of ul element</h3>
@@ -38,6 +38,8 @@
     <div id="input1" class="listener">input<br>(jQuery)</div>
     <div id="input2" class="listener">input<br>(DOM Listener)</div>
     <div id="input3" class="listener">oninput<br>(DOM Handler)</div>
+
+    <h3>Event object</h3>
     <p>Event object is not passed automatically to event handler functions
       in IE8. It is available as a child of the window object.</p>
     <p>
@@ -52,6 +54,44 @@
     <div id="mouseover1" class="listener">mouseover<br>(jQuery)</div>
     <div id="mouseover2" class="listener">mouseover<br>(DOM Listener)</div>
     <div id="mouseover3" class="listener">onmouseover<br>(DOM Handler)</div>
+
+    <h3>Changing default behavior</h3>
+    <p>preventDefault() is used to prevent the default behavior of links
+      below. IE8 had an equivalent property called returnValue which can be
+      set to false.</p>
+      <textarea class="code" readonly=true cols=41 rows=8>
+  function(e) {
+    if (e.preventDefault) {
+      e.preventDefault();
+    } else {
+      e.returnValue = false;
+    }
+  }</textarea>
+    <ul id="noLinks">
+      <li><a target="_blank"
+        href="http://www.google.com/chrome/">Google Chrome</a></li>
+      <li><a target="_blank"
+        href="http://www.mozilla.org/firefox/">Mozilla Firefox</a></li>
+      <li><a target="_blank"
+        href="http://www.apple.com/safari/">Apple Safari</a></li>
+      <li><a target="_blank"
+        href="http://www.opera.com/">Opera browser</a></li>
+      <li><a target="_blank" id="IE"
+        href="http://www.microsoft.com/ie/">Microsoft Internet Explorer</a></li>
+    </ul>
+    <div id="click4" class="listener">click<br>(jQuery)</div>
+    <div id="click5" class="listener">click<br>(DOM Listener)</div>
+    <div id="click6" class="listener">onclick<br>(DOM Handler)</div>
+    <p>stopPropagation() is used to stop an event bubbling up. The equivalent
+      in IE8 is the cancelBubble property.</p>
+      <textarea class="code" readonly=true cols=41 rows=8>
+  function(e) {
+    if (e.stopPropagation) {
+      e.stopPropagation();
+    } else {
+      e.cancelBubble = true;
+    }
+  }</textarea>
 
     <p>
       <small><i>Changes last made on <span id="timestamp"></span></i></small>
