Fix html errors.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <h3>Memoization in Closure</h3>
-    <p>Fibonacci( <input id="fibn" type="text" size=5 maxlength=4></input> ) =
+    <p>Fibonacci( <input id="fibn" type="text" size=5 maxlength=4> ) =
       <span id="fibans">?</span></p>
     <p>
       <textarea class="code" readonly=true cols=41 rows=19>
@@ -162,7 +162,7 @@
 > console.log(isBobSmiling, bob);</textarea>
     </p>
 
-    <a id="ie8"/><h3><a href="ie8/">Internet Explorer 8</a></h3>
+    <a id="ie8"></a><h3><a href="ie8/">Internet Explorer 8</a></h3>
     <p>Most browsers except IE8 treat whitespace between elements (such as
       spaces or carriage returns) as a text node.</p>
     <p>IE8 had a different event model and did not support addEventListener().
