Change css and js load order, async load and specify charset, detected by PageSpeed. Makes a very noticeable improvements even without minify.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="listener.js"></script>
-    <script src="script.js"></script>
+
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     <link rel="stylesheet" type="text/css" href="listener.css"/>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script async src="listener.js"></script>
+    <script async src="script.js"></script>
+
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Notes on foundations of JavaScript</title>
   </head>
